# vbcc

./: .gitignore  CMakeLists.txt  declaration.c  dtgen_msvc.in
